[package]
name = "tokio"
version = "0.1.1"
edition = "2024"
resolver = "3"

[dependencies]
axum                = { version = "0.8.3", features = ["http2", "macros", "multipart", "ws"], optional = true }
bytes               = { version = "1.10.1", optional = true }
hyper               = { version = "1.6.0", default-features = false, optional = true}
io-uring            = { version = "0.7.4", optional = true}
pin-project         = { version = "1.1.10", optional = true }
postgres-types      = { version = "0.2.9", features = ["derive", "chrono-04"], optional = true }
prost               = { version = "0.13.5", optional = true }
rdbc                = { version = "0.1.6", optional = true }
rustls              = { version = "*", optional = true }
_tokio              = { version = "1.44.1", package = "tokio", features = ["full"] }
tokio-io            = { version = "0.1.13", optional = true }
tokio-postgres      = { version = "0.7.13", features = ["with-chrono-0_4"], optional = true }
tokio-util          = { version = "0.7.14", features = ["full"], optional = true }
tokio-stream        = { version= "0.1.17", features = ["full"], optional = true }
tokio-rustls        = { version = "0.26.2", optional = true }
tracing             = { version = "0.1.41", optional = true }
tracing-subscriber  = { version = "0.3.19", optional = true }
tracing-indicatif   = { version = "0.3.9", optional = true }

[features]
default		        = []
full		        = [
    "axum",
    "bytes",
    "fs",
    "hyper",
    "util",
    "io-util",
    "io-uring",
    "io-std",
    "macros",
    "net",
    "parking_lot",
    "postgres",
    "process",
    "prost",
    "rdbc",
    "rt",
    "rt-multi-thread",
    "rustls",
    "signal",
    "stream",
    "sync",
    "time",
    "tracing",
]
axum                = ["dep:axum"]
fs		            = ["_tokio/fs"]
hyper               = ["dep:hyper"]
util		        = ["tokio-util"]
io-util		        = ["_tokio/io-util"]
io-uring            = ["dep:io-uring"]
io-std		        = ["_tokio/io-std"]
macros		        = ["_tokio/macros"]
net		            = ["_tokio/net"]
parking_lot         = ["_tokio/parking_lot"]
postgres	        = ["tokio-postgres/with-chrono-0_4", "postgres-types/derive", "postgres-types/chrono-04"]
process		        = ["_tokio/process"]
prost               = ["dep:prost"]
rdbc                = ["dep:rdbc"]
rt		            = ["_tokio/rt"]
rt-multi-thread     = ["_tokio/rt-multi-thread"]
rustls              = ["tokio-rustls", "dep:rustls"]
signal		        = ["_tokio/signal"]
stream              = ["tokio-stream/full", "pin-project"]
sync		        = ["_tokio/sync"]
time		        = ["_tokio/time"]
tracing             = ["dep:tracing", "tracing-indicatif", "tracing-subscriber"]

